tests/kulezi_tests/bad/dup_ident02.lat
int main() {

}

class A {}

class A {}